--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "changeset": "changeset"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
