--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
+          steps:
+          
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
       - name: Install Dependencies
         run: pnpm install
