--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,9 @@
     "postinstall": "node ./scripts/postinstall.js"
   },
   "keywords": [],
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Proxity Studios",
   "license": "MIT",
   "devDependencies": {
