--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "repick",
-  "private": false,
+  "private": true,
   "scripts": {
     "build": "turbo run build",
     "release": "pnpm run build && changeset publish",
