--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repick/core",
+  "name": "@velkit/core",
   "version": "0.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -27,12 +27,12 @@
     "@jest/globals": "^30.0.4",
     "jest": "^30.0.4",
     "ts-jest": "^29.4.0",
-  	"@repick/typescript-config": "workspace:*",
+  	"@velkit/typescript-config": "workspace:*",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "https-proxy-agent": "^7.0.6",
-    "@repick/common": "workspace:*",
+    "@velkit/common": "workspace:*",
     "tar": "^7.4.3"
   }
 }
